--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,54 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="sk.peterh.bp.tictactoe.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <Button
+        android:text="Hrať"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:id="@+id/play"
+        android:layout_marginTop="32dp"
+        android:layout_centerHorizontal="true"
+        android:background="@color/black"
+        android:textColor="@color/white"/>
+
+    <Button
+        android:text="O aplikácii"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:id="@+id/about"
+        android:layout_below="@+id/settings"
+        android:layout_alignLeft="@+id/settings"
+        android:layout_alignStart="@+id/settings"
+        android:background="@color/black"
+        android:textColor="@color/white"/>
+
+    <Button
+        android:text="Nastavenia"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/settings"
+        android:layout_marginTop="32dp"
+        android:layout_below="@+id/play"
+        android:layout_alignLeft="@+id/play"
+        android:layout_alignStart="@+id/play"
+        android:background="@color/black"
+        android:textColor="@color/white"
+        />
+
+    <Button
+        android:text="Ukončiť"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/exit"
+        android:layout_marginTop="32dp"
+        android:layout_below="@+id/about"
+        android:layout_alignLeft="@+id/about"
+        android:layout_alignStart="@+id/about"
+        android:background="@color/black"
+        android:textColor="@color/white"
+        />
 </RelativeLayout>
